# ficture

./: .gitignore  404.html  MANIFEST.in  README.md  __main__.py  anchor_fn.py  artm_fn.py  brt.py  data_loader.py  filter_fn.py  hexagon_fn.py  image_fn.py  index.html  kd2d_fn.py  kloptim.py  layout_fn.py  lda_cluster_degene_doc.md  lda_minibatch.py  mds_color_circle.py  mkdocs.yml  online_gp_slda.py  online_lda.py  online_penalized_lda.py  online_slda.py  onlinesldavb.py  pixel_factor_loader.py  pixel_loader.py  pixel_to_unit_loader.py  pyproject.toml  read_chunk_fn.py  requirements.txt  sartm.py  sartm_batch.py  scorpus.py  scorpus_gp.py  setup.cfg  sfc_fn.py  sitemap.xml  slda_minibatch.py  snmf_fn.py  (+5 more)
blog/: index.html
docs/: format_input.md  index.md  install.md  localrun.md  localrun_legacy.md  quickstart.md  run.md
docs/format_input/: cosmx.md  visiumHD.md  vizgen.md  xenium.md
examples/: realdata.md  simulation.md
examples/data/: coordinate_minmax.tsv
examples/script/: generic_I.sh  generic_II.sh  generic_III.sh  generic_V.sh
examples/simulation/: batman.py  cmd_ficture.sh  (+3 more)
ficture/: __init__.py  cli.py
format_input/: index.html
info/: gencode.human.mouse.combined.gene_names.clean.tsv  hiseq.l1.half_right.coordinate_minmax.tsv  hiseq.l2.half_right.coordinate_minmax.tsv  hiseq.layout.tsv  hiseq.tile_list.txt
install/: index.html
localrun/: index.html
localrun_legacy/: index.html
misc/: format_cosmx.py  format_vizgen.py  format_xenium.py  index.html
punkst/: MANIFEST.in  __main__.py  pyproject.toml  setup.cfg
quickstart/: index.html
run/: index.html
script/: anchor_kl.py  artm_sem.py  choose_color.py  co_expression_disc.py  co_occurrence.py  co_occurrence_count.py  coordinate_local_to_global.py  de_bulk.py  de_hold_out_bulk.py  de_naive.py  dfactorize.py  factor_report.py  factor_report.template.html  filter_boundary.py  filter_poly.py  filter_post.py  find_anchor.py  highly_variable_gene.py  init_model_from_marker.py  init_model_selection.py  lda.spl_unspl.p  lda.spl_unspl.py  lda_base.py  lda_base.v2.py  lda_base_multitile.py  lda_base_multitile_velo.py  lda_compare_nfactor.py  lda_impute.py  lda_seg_nuclei.py  lda_transform.py  lda_transform.spl_unspl.py  lda_univ.py  make_dge_augmented.py  make_dge_randomized.py  make_dge_univ.py  make_sge_by_hexagon.py  make_sge_by_hexagon_raw.py  make_sge_by_region.py  make_spatial_minibatch.multi_lane.py  make_spatial_minibatch.py  (+30 more)
search/: search_index.json
site/: sitemap.xml
visual/: index.html
(+97 files in other folders)
